--- a/index.html
+++ b/index.html
@@ -151,5 +151,15 @@
 			window.ontouchmove = function() { return false; }
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 		</script>
+		<!-- Service Worker Registration -->
+		<script>
+		if ('serviceWorker' in navigator) {
+			window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/sw.js')
+					.then(reg => console.log('SW registered'))
+					.catch(err => console.log('SW failed', err));
+			});
+		}
+		</script>
 	</body>
 </html>
